<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/spacer1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/pl_small"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="20dp"/>-->
        <!--<LinearLayout-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:orientation="vertical" >-->
        <!--</LinearLayout>-->

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="25"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/pl_small"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="v1.0"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="@android:color/black"
            android:padding="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edittext_size"
                android:hint="@string/login_code"
                android:text="salestest"
                android:textColor="@color/white"
                android:background="@drawable/transparent" >

                <requestFocus />
            </EditText>
            <!---->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textPrimary"
                android:orientation="vertical" >
            </LinearLayout>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edittext_size"
                android:hint="@string/login_password"
                android:text="salestest"
                android:textColor="@color/white"
                android:background="@drawable/transparent"
                android:layout_marginTop="20dp"
                android:inputType="textPassword" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textPrimary"
                android:orientation="vertical" >
            </LinearLayout>
            <!---->

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/swipe_heigh"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textSize="@dimen/textview_medium"
            android:text="@string/login_btSignin"
            android:background="@color/color_primary"/>
        <!--android:background="@drawable/btn_g"-->

    </LinearLayout>

</RelativeLayout>
