<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<!--<LinearLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:weightSum="100"-->
    <!--android:orientation="vertical">-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/fieldset_border"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:padding="10dp"-->
        <!--&gt;-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/order_item"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:id="@+id/tv_order_item"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_weight=".3" />-->
            <!--<EditText-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/et_order_item"-->
                <!--android:layout_weight=".7"-->
                <!--android:editable="false"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/order_item_price"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:id="@+id/tv_order_item_price"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_weight=".3" />-->
            <!--<EditText-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/et_order_item_price"-->
                <!--android:layout_weight=".7"-->
                <!--android:inputType="number"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/order_item_qty"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:id="@+id/tv_vat"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_weight=".3" />-->
            <!--<EditText-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/et_order_item_qty"-->
                <!--android:layout_weight=".7"-->
                <!--android:inputType="number"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/order_item_sub_total"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:id="@+id/tv_label_total"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_weight=".3" />-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Rp. 0"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:id="@+id/tv_sub_total"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:gravity="right"-->
                <!--android:layout_weight=".7" />-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->
<!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<EditText-->
                <!--android:id="@+id/et_order_item"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/order_item"-->
                <!--android:singleLine="true" />-->
            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_item"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_order_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_order_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_item_price"
                android:typeface="sans"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_order_item_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_order_item_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_item_qty"
                android:typeface="sans"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_item_sub_total"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tv_label_total"
                android:layout_centerVertical="true"
                android:layout_weight=".4"
                android:typeface="sans" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Rp. 0"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:id="@+id/tv_sub_total"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:layout_weight=".6"
                android:typeface="sans"
                android:textColor="@color/green"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_order_item_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/et_order_item_cd"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            />
        <!--android:visibility="invisible"-->
        <EditText
            android:id="@+id/et_order_item_nm"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/et_order_item_stock"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/et_order_item_material"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="Cancel"
            android:background="@color/color_primary_dark"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="Save"
            android:background="@color/color_primary_dark"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/button_save_item"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--android:layout_gravity="end|bottom"-->
        <!--android:src="@mipmap/ic_send" />-->
</LinearLayout>